qbittorrent/deployment.qbittorrent.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent
    environment: prod
  name: prod-qbittorrent
  namespace: servarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - env:
        - name: PUID
          valueFrom:
            configMapKeyRef:
              key: PUID
              name: servarr-config
        - name: PGID
          valueFrom:
            configMapKeyRef:
              key: PGID
              name: servarr-config
        - name: TZ
          valueFrom:
            configMapKeyRef:
              key: TZ
              name: servarr-config
        - name: WEBUI_PORT
          value: '8080'
        - name: QBT_LEGAL_NOTICE 
          value: "confirm"
        - name: QBT_TORRENTING_PORT
          value: "6881"
        - name: SSL_CERT_FILE
          value: /etc/ssl/custom/ca-bundle.crt
        image: lscr.io/linuxserver/qbittorrent:latest
        name: qbittorrent
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 6881
          name: tcp
          protocol: TCP
        - containerPort: 6881
          name: udp
          protocol: UDP
        resources:
          limits:
            cpu: 2000m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
        - mountPath: /etc/ssl/custom
          name: ca-certs
          readOnly: true
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/arch: amd64
      securityContext:
        fsGroup: 3000
        runAsGroup: 3000
        runAsUser: 3000
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prod-qbittorrent-config
      - name: downloads
        persistentVolumeClaim:
          claimName: prod-downloads
      - name: ca-certs
        configMap:
          name: internal-ca-bundle
