qbittorrent/service.qbittorrent.prod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent
    environment: prod
  name: prod-qbittorrent
  namespace: servarr
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: tcp
    port: 6881
    protocol: TCP
    targetPort: 6881
  - name: udp
    port: 6881
    protocol: UDP
    targetPort: 6881
  selector:
    app: qbittorrent
  type: ClusterIP
